# style-editor

./: Cargo.toml  LICENSE  README.md  STYLE_EDITOR_VISION.md  package.json
client/: package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/: index.css
client/src/layouts/: MainLayout.tsx
client/src/lib/components/: ComprehensivePreview.svelte  DecisionWizard.svelte  LivePreview.svelte
client/src/lib/stores/: bookmarks.ts  intent.ts
client/src/lib/types/: bindings.ts
client/src/pages/: HomePage.tsx
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/create-wizard/: +page.svelte
client/src/routes/style/[id]/: +page.svelte
server/: Cargo.toml
server/crates/api/: Cargo.toml
server/crates/api/src/: main.rs
server/crates/intent-engine/: Cargo.toml
server/crates/intent-engine/src/: lib.rs
server/src/: main.rs
